# mobilect-payroll

./: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  configure.ac
data/: Makefile.am  com.mobilectpower.payroll.gschema.xml  com.mobilectpower.payroll.gschema.xml.in.in  mobilect-payroll.desktop.in.in
data/icons/: Makefile.am
help/: Makefile.am
help/C/: administrators-add.page  administrators-change-password.page  administrators-edit.page  administrators-remove.page  branches-add.page  branches-edit.page  branches-remove.page  control-panel-change-preferences.page  control-panel-login.page  control-panel-logout.page  control-panel-sort-view.page  employees-add.page  employees-change-password.page  employees-edit.page  employees-remove.page  employees-set-deductions.page  index.page  quickstart.page  reports-create-overtime.page  reports-create-regular.page  reports-create.page  reports-set-fonts.page  reports-set-holidays.page  time-records-add.page  time-records-edit.page  time-records-remove.page  time-records-search.page
po/: POTFILES.in  POTFILES.skip
src/: Makefile.am  admin-login-page.vala  administrator-edit-widget.vala  administrator.vala  application.vala  config.vapi  cpanel-administrators.vala  cpanel-employees.vala  cpanel-holidays.vala  cpanel-preferences.vala  cpanel-report.vala  cpanel-time-records.vala  cpanel.vala  database.vala  date-entry.vala  date-time-entry.vala  employee-edit-widget.vala  employee-list.vala  employee-login-page.vala  employee.vala  filter.vala  login-page.vala  mobilect-payroll-cpanel-administrators-ui.xml  mobilect-payroll-cpanel-deductions-ui.xml  mobilect-payroll-cpanel-employees-ui.xml  mobilect-payroll-cpanel-holidays-ui.xml  mobilect-payroll-cpanel-report-ui.xml  mobilect-payroll-cpanel-time-records-ui.xml  mobilect-payroll-cpanel-ui.xml  mobilect-payroll-os-compat.c  mobilect-payroll-os-compat.h  mobilect-payroll-ui.xml  mobilect-payroll.gresource.xml  mobilect-payroll.rc.in  overtime-report.vala  password-dialog.vala  pay-group.vala  pay-period.vala  print-report.vala  regular-report.vala  (+6 more)
src/cpanel/: cpanel-administrators.vala  cpanel-branches.vala  cpanel-deductions.vala  cpanel-employees.vala  cpanel-holidays.vala  cpanel-preferences.vala  cpanel-report.vala  cpanel-tab.vala  cpanel-time-records.vala  cpanel.vala  report-assistant.vala
src/database/: administrator-list.vala  administrator.vala  branch-list.vala  branch.vala  database.vala  deductions.vala  employee-list.vala  employee.vala  month-info.vala  time-record-list.vala  time-record.vala
src/database-widgets/: add-time-record-assistant.vala  administrator-edit-dialog.vala  administrator-edit-widget.vala  branch-edit-dialog.vala  branch-edit-widget.vala  employee-edit-dialog.vala  employee-edit-widget.vala  find-time-record-dialog.vala  time-record-edit-dialog.vala  time-record-edit-widget.vala  total-deductions-dialog.vala
src/datetime/: date-entry.vala  date-spin-button.vala  date-time-entry.vala  date-time-spin-button.vala  period-spin-button.vala  time-spin-button.vala  time.vala  utils.vala
src/filter/: filter.vala  pay-group.vala  pay-period.vala  time-period.vala
src/login/: admin-login-page.vala  employee-login-page.vala  login-page.vala
src/main/: application.vala  mobilect-payroll.vala  preferences-dialog.vala  window.vala
src/portability/: portability.c  portability.h  portability.vapi
src/report/: overtime-report.vala  regular-report.vala  report.vala
src/report-assistant/: report-assistant-apply-page.vala  report-assistant-basic-info-page.vala  report-assistant-confirm-page.vala  report-assistant-finish-page.vala  report-assistant-footer-info-page.vala  report-assistant-page-setup-page.vala  report-assistant-page.vala  report-assistant-select-components-page.vala  report-assistant-select-employees-page.vala  report-assistant-welcome-page.vala  report-assistant.vala
src/resources/: mobilect-payroll.gresource.xml
src/settings/: settings.vala
src/ui/: mobilect-payroll-add-time-record-assistant-ui.xml  mobilect-payroll-cpanel-administrators-ui.xml  mobilect-payroll-cpanel-branches-ui.xml  mobilect-payroll-cpanel-deductions-ui.xml  mobilect-payroll-cpanel-employees-ui.xml  mobilect-payroll-cpanel-report-ui.xml  mobilect-payroll-cpanel-time-records-ui.xml  mobilect-payroll-cpanel-ui.xml  mobilect-payroll-print-preview-ui.xml  mobilect-payroll-report-assistant-ui.xml  mobilect-payroll-ui.xml
src/widgets/: administrator-edit-dialog.vala  administrator-edit-widget.vala  check-list.vala  dialog.vala  employee-edit-dialog.vala  employee-edit-widget.vala  find-dialog.vala  find-widget.vala  password-dialog.vala  password-widget.vala  preferences-dialog.vala  print-preview-window.vala  sort-tree-view-dialog.vala  surface-draw-widget.vala  time-record-edit-dialog.vala  time-record-edit-widget.vala
vapi/: Makefile.am  cairo-extension.vapi  libgda-5.0.vapi
