@YELP_HELP_RULES@

HELP_ID = mobilect-payroll

HELP_MEDIA = \
	figures/mobilect-payroll-logo.png \
	figures/mobilect-payroll-screenshot.png

HELP_FILES = \
	index.page \
	quickstart.page \
	control-panel-login.page \
	control-panel-logout.page \
	control-panel-change-preferences.page \
	control-panel-sort-view.page \
	branches-add.page \
	branches-remove.page \
	branches-edit.page \
	employees-add.page \
	employees-remove.page \
	employees-edit.page \
	employees-change-password.page \
	employees-set-deductions.page \
	time-records-add.page \
	time-records-remove.page \
	time-records-edit.page \
	time-records-search.page \
	administrators-add.page \
	administrators-remove.page \
	administrators-edit.page \
	administrators-change-password.page \
	reports-create.page \
	reports-set-fonts.page \
	reports-set-holidays.page
